[package]
name = "tunneler-core"
version = "0.9.0"
authors = ["lol3rrr <s.loler03@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Provides the Core functionality for the Tunneler software"
repository = "https://github.com/Lol3rrr/tunneler-core"

[features]
default = ["client", "server"]
client = []
server = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4.11" }
rand = { version = "0.7.0", features = ["getrandom", "small_rng"] }
dashmap = { version = "4.0.2" }
rsa = { version = "0.3.0" }
base64 = { version = "0.13.0" }
tokio = { version = "1.5", features = ["rt", "rt-multi-thread", "net", "io-util", "sync", "time", "macros"] }
fnv = { version = "1.0.7" }
crossbeam-queue = "0.3"
async-trait = "0.1.42"

[dev-dependencies]
criterion = "0.3"
reqwest = "0.11.0"
env_logger = "0.8.2"

[[bench]]
name = "Benchmark"
harness = false
path = "./benches/benchmark.rs"
