[package]
name = "tunneler-core"
version = "0.12.0"
authors = ["lol3rrr <s.loler03@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Provides the Core functionality for the Tunneler software"
repository = "https://github.com/Lol3rrr/tunneler-core"

[features]
default = ["client", "server", "trace", "logging"]
client = []
server = []
logging = ["log"]
trace = ["tracing", "tracing-futures"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4.11", optional = true }
tracing = { version = "0.1", optional = true }
tracing-futures = { version = "0.2", optional = true }

rand = { version = "0.7.0", features = ["getrandom", "small_rng"] }
dashmap = { version = "4.0.2" }
rsa = { version = "0.3.0" }
base64 = { version = "0.13.0" }
tokio = { version = "1.7", features = ["rt", "net", "io-util", "sync", "time"] }
fnv = { version = "1.0.7" }
crossbeam-queue = "0.3"
async-trait = "0.1.42"

[dev-dependencies]
tokio = { version = "1.7", features = ["rt", "rt-multi-thread", "net", "io-util", "sync", "time", "macros"] }
criterion = "0.3"
env_logger = "0.8.2"

[[bench]]
name = "Benchmark"
harness = false
path = "./benches/benchmark.rs"
